Big overhaul of kmdf .vcxproj and visualddk.props, now the .vcxproj is very concise.

--- a/wdk7-samples/toaster/wdm/toaster.htm
+++ b/wdk7-samples/toaster/wdm/toaster.htm
@@ -1448,7 +1448,7 @@ Finish at 'Completing the Add/Remove Hardware Wizard.' </span></p>
 "Verdana","sans-serif"'>To install the bus driver on Vista and later OS, use
 devcon.exe as shown below.</span></p>
 
-<p><span style='font-size:10.0pt;line-height:115%;font-family:"Verdana","sans-serif"'>Another
+<p><span style='font-size:10.0pt;line-height:115%;font-family:"Verdana","sans-serif"'>The
 quick way to install the bus driver without going through so many mouse clicks
 would be to use the Installer sample application present in the <i>src\tools\devcon</i>
 directory. This sample allows you to root-enumerate a driver with one simple
