Move ToasterApp_vs2010.sln up one level, now side-by-side with ToasterDrv_vs2010.sln, so sys/exe/dll are generated into the same output folder, very elegant.

--- a/wdk7-samples/toaster/readme.htm
+++ b/wdk7-samples/toaster/readme.htm
@@ -558,6 +558,8 @@ what’s contained in each of the top-level directories.</p>
   border-top:none;padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal style='margin-bottom:7.55pt;line-height:
   normal'>Exe</p>
+  <p class=MsoNormal style='margin-bottom:7.55pt;line-height:
+  normal'>(new name: exe-dll)</p>
   </td>
   <td valign=top style='border-top:none;border-left:
   none;border-bottom:solid black 1.0pt;border-right:solid black 1.0pt;
