Update ToasterCoInstaller1.dll vcxproj, the concise style. Add kmdf_toast_coinstaller.inx to kernel driver func_simple_cpp_vs2010.vcxproj, now it generates 3 inf-s from one build.
Fix ToasterStampInf.bat's white-space-in-path defect.

--- a/wdk7-samples/toaster/readme.htm
+++ b/wdk7-samples/toaster/readme.htm
@@ -471,8 +471,8 @@ what’s contained in each of the top-level directories.</p>
   
   <p class=MsoNormal style='margin-bottom:7.55pt;line-height:
   normal'>This DLL shows how to create a friendly
-  	name based on the instance number of the device and also how parse custom
-  	section in the INF. This DLL is referred in the INF file used to install
+  	name based on the instance number of the device and also how to parse custom
+  	section([MySection]) in tostco.inf. This DLL is referred in the INF file used to install
   	driver for toaster device.</p></td>
  </tr>
  <tr style='mso-yfti-irow:5'>
